# project-turbo

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  LICENSE  Proje_İlerleme_Raporu.md  README.md  ROADMAP.md  TEST_PLAN.md  pyproject.toml
.kilo/plans/: 1775076521306-clever-wolf.md
backup/pre-2pass-kernel/: fattn-common.cuh  fattn-vec.cuh  fattn.cu  llama-kv-cache.cpp  llama-kv-cache.h
docs/: rope-refactor-plan.md  turboquant-kv-cache.md  turboquant-vs-implementation.md
docs/test-results/: bitwidth_sweep.json  bitwidth_sweep_Qwen3.5-9B-Q4_K_M_20260401_164814.json  bitwidth_sweep_Qwen3.5-9B-Q4_K_M_20260401_165854.json  bitwidth_sweep_Qwen3.5-9B-Q4_K_M_20260402_023309.json  bitwidth_sweep_Qwen3.5-9B-Q4_K_M_20260402_024737.json  bitwidth_sweep_Qwen3.5-9B-Q4_K_M_20260403_003311.json  bitwidth_sweep_qwen3-8b-q4_k_m_20260401_163645.json  (+21 more)
examples/: 128k_inference.py
patches/: 001-fattn-2pass.patch  002-kv-cache-dual-write.patch  003-kv-cache-header.patch
scripts/: build_turbo.sh  check_kv_dependency.py  cognitive_router.py  extract_enums.py  rollback_2pass.sh
src/turbo/: __init__.py  enums.py  (+2 more)
tests/: test_2pass_compare.py  test_2pass_logits.py  test_2pass_minimal.py  test_2pass_quick.py  test_2pass_validation.py  test_bitwidth_sweep.py  test_cross_model.py  test_determinism.py  test_latency.py  test_logits_no_2pass.py  test_long_context.py  test_long_ctx_quick.py  test_online_softmax_merge.py  test_preproduction.py  test_reasoning.py  test_sampling_divergence.py  test_sampling_quick.py  test_stress.py  test_turbo_inference.py  test_turbo_smoke.py
