[project]
name = "project-turbo"
version = "0.3.0"
description = "TurboQuant asimetrik K/V cache compression — zero-swap 128K context on consumer GPUs"
requires-python = ">=3.11"
dependencies = []
license = {text = "MIT"}
authors = [
    {name = "PROJECT-TURBO Contributors"},
]
keywords = ["llama", "turboquant", "kv-cache", "quantization", "cuda", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/uzunecevit/project-turbo"
Repository = "https://github.com/uzunecevit/project-turbo"
Issues = "https://github.com/uzunecevit/project-turbo/issues"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
